updated the details page, and player controller, added migration of DB for functionality

--- a/src/HomeBase/Views/Home/Index.cshtml
+++ b/src/HomeBase/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             that empowers local players control over 
             when and where they play. Enabling players 
             to connect with Team Captains so they can 
-            connect with some balls!
+            connect with some balls! (test changes for TFS Delete as needed)
         </p>
     </div>
     <div class="col-md-4">
