--- a/src/HomeBase/Views/Players/Details.cshtml
+++ b/src/HomeBase/Views/Players/Details.cshtml
@@ -64,6 +64,29 @@
         <dd>
             @Html.DisplayFor(model => model.TeamRequested)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Enrollments)
+        </dt>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Player's Team</th>
+                    <th>Position</th>
+                </tr>
+                @foreach (var item in Model.Enrollments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Team)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modeItem => item.Position)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <div>
