updated CRUD operations

--- a/src/HomeBase/Views/Players/Create.cshtml
+++ b/src/HomeBase/Views/Players/Create.cshtml
@@ -29,7 +29,7 @@
             <label asp-for="EnrollmentDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="EnrollmentDate" class="form-control" />
-                <span asp-validation-for="EnrollmentDate" class="text-danger" />
+                <span asp-validation-for="EnrollmentDate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
