added in paging function, Search function broken

--- a/src/HomeBase/Views/Players/Index.cshtml
+++ b/src/HomeBase/Views/Players/Index.cshtml
@@ -1,4 +1,5 @@
-@model IEnumerable<HomeBase.Models.Player>
+
+@model PaginatedList<HomeBase.Models.Player>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,28 +10,42 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<from asp-action="Index" method="get">
+    <div class="from-action no-color">
+        <p>
+            Search Players Names: <input type="text" name="searchString" value="@ViewData["currentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-action="Index">Back to List</a>
+        </p>
+    </div>
+</from>
 <table class="table">
     <thead>
         <tr>
-            <th>
+
+            @*<th>
                 @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
+            </th>*@
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Last Name</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EnrollmentDate)
+                First Name
             </th>
             <th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Enrollment Date</a>
+            </th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Experience)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
+            </th>*@
+           
+            @*<th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
             <th>
@@ -38,46 +53,69 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TeamRequested)
-            </th>
+            </th>*@
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnrollmentDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Experience)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Position)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TeamRequested)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PlayerID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PlayerID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PlayerID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EnrollmentDate)
+                </td>
+                @*<td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+               
+                <td>
+                    @Html.DisplayFor(modelItem => item.Experience)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Position)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TeamRequested)
+                </td>*@
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.PlayerID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.PlayerID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.PlayerID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@{ 
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-page="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn butn-default @prevDisabled btn">
+    Previous
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-page="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn butn-default @nextDisabled btn">
+    Next
+</a>
