updated teams and captains controllers/Views

--- a/src/HomeBase/Views/Shared/_Layout.cshtml
+++ b/src/HomeBase/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Players" asp-action="Index">Players</a></li>
-                    <li><a asp-area="" asp-controller="Team Roster" asp-action="Index">Team Roster</a></li>
+                    <li><a asp-area="" asp-controller="Teams" asp-action="Index">Team Roster</a></li>
+                    <li><a asp-area="" asp-controller="Captains" asp-action="Index">Captains</a></li>
                     <li><a asp-area="" asp-controller="Enrollment" asp-action="Index">Sign up for a Team</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
