--- a/src/HomeBase/Views/Teams/Create.cshtml
+++ b/src/HomeBase/Views/Teams/Create.cshtml
@@ -10,13 +10,13 @@
     <div class="form-horizontal">
         <h4>Team</h4>
         <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="CaptainID" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <select asp-for="CaptainID" class ="form-control" asp-items="ViewBag.CaptainID"></select>
-            </div>
+       @* <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="CaptainID" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <select asp-for="CaptainID" class ="form-control" asp-items="ViewBag.CaptainID"></select>
         </div>
+    </div>*@
         <div class="form-group">
             <label asp-for="TeamName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
