--- a/src/HomeBase/Views/Teams/Index.cshtml
+++ b/src/HomeBase/Views/Teams/Index.cshtml
@@ -15,6 +15,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.TeamName)
             </th>
+           
+            <th>
+                @Html.DisplayNameFor(model => model.Captain)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Players)
             </th>
@@ -28,8 +32,16 @@
                 @Html.DisplayFor(modelItem => item.TeamName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Players)
+                @Html.DisplayFor(modelItem => item.Captain.LastName)
             </td>
+            @foreach (var test in item.Players)
+            {
+                <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => test.LastName)
+                </td>
+                    </tr>
+            }
             <td>
                 <a asp-action="Edit" asp-route-id="@item.TeamID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.TeamID">Details</a> |
